fix group-selection ios sf bug (#492)

--- a/components/mip-group-selection/mip-group-selection.less
+++ b/components/mip-group-selection/mip-group-selection.less
@@ -48,38 +48,6 @@ mip-group-selection {
     background: rgba(0, 0, 0, 0.1);
   }
 
-  .mip-group-selection-sidebar-wrapper {
-    top: 0;
-    right: 10px;
-    bottom: 0;
-    margin: 10px 0;
-  }
-
-  .mip-group-selection-sidebar {
-    z-index: 50;
-    right: 7px;
-    overflow: auto;
-    -webkit-overflow-scrolling: touch;
-    box-sizing: border-box;
-    max-height: 100%;
-    padding: 20px 0;
-    border: 1px solid rgba(0, 0, 0, 0.05);
-    text-align: center;
-    color: #666;
-    border-radius: 10px;
-    background: rgba(255, 255, 255, 0.5);
-  }
-
-  .mip-group-selection-link {
-    display: block;
-    padding: 0 10px;
-    font-size: 13px;
-    font-weight: bold;
-    line-height: 3;
-    color: #38f;
-    border-radius: 50%;
-  }
-
   .mip-group-selection-letter-top {
     position: absolute;
     z-index: 40;
@@ -109,5 +77,40 @@ mip-group-selection {
     color: #fff;
     border-radius: 3px;
     background: rgba(51, 51, 51, 0.4);
+  }
+}
+
+mip-fixed {
+  .mip-group-selection-sidebar-wrapper {
+    top: 0;
+    right: 10px;
+    bottom: 0;
+    margin: 10px 0;
+    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+  }
+
+  .mip-group-selection-sidebar {
+    z-index: 50;
+    right: 7px;
+    overflow: auto;
+    -webkit-overflow-scrolling: touch;
+    box-sizing: border-box;
+    max-height: 100%;
+    padding: 20px 0;
+    border: 1px solid rgba(0, 0, 0, 0.05);
+    text-align: center;
+    color: #666;
+    border-radius: 10px;
+    background: rgba(255, 255, 255, 0.5);
+  }
+
+  .mip-group-selection-link {
+    display: block;
+    padding: 0 10px;
+    font-size: 13px;
+    font-weight: bold;
+    line-height: 3;
+    color: #38f;
+    border-radius: 50%;
   }
 }
